dark mode fix

--- a/style.css
+++ b/style.css
@@ -595,15 +595,15 @@ footer a {
   background-color: #123;
 }
 .dark header {
-  box-shadow: 0 2px 20px 1px #000;
+  box-shadow: 0 2px 20px 1px rgba(255, 255, 255, 0.2);
 }
 .dark header .menuBtn{
   color: #fff;
-  box-shadow: 1px 2px 4px 1px rgb(255, 255, 255, .3);
+  box-shadow: 1px 3px 4px 1px rgba(255, 255, 255, 0.2);
 }
 .dark .menubar {
   background-color: rgba(0, 0, 0, 0.7);
-  box-shadow: -1px 2px 10px 1px #000;
+  box-shadow: -1px 2px 10px 1px rgba(255, 255, 255, 0.2);
 }
 .dark .menubar a, .dark .menubar button {
   color: #fff;
@@ -634,7 +634,8 @@ footer a {
   color: #000;
 }
 .dark .certificate {
-  background-image: linear-gradient(135deg, #456 50%, #000 50%)
+  background-image: linear-gradient(135deg, #123 50%, #001 50%);
+  box-shadow: 1px 2px 10px 1px rgba(255, 255, 255, 0.2);
 }
 .dark .certificate a {
   color: #fff;
